2010-09-10  Dominique Dumont  <domi.dumont@free.fr> 1.311

	* lib/Config/Model/Tk/HashEditor.pm (Populate): usability improvement:
	  copy selected entry text into item when keep is set
	* lib/Config/Model/TkUI.pm (disp_hash): Synchronize ordered hash display in
	tree with respect to the hash editor

2010-09-10  Dominique Dumont  <domi.dumont@free.fr> 1.310

	* lib/Config/Model/Tk/HashEditor.pm (Populate): Fix bug that messed up 
	  effects of 'add' and 'move_down' buttons.

2010-08-08  Dominique Dumont  <domi.dumont@free.fr> 1.309

	* lib/Config/Model/Tk/AnyViewer.pm (add_help): Fix bug that hid
	summary and help text

2010-07-22  Dominique Dumont  <domi.dumont@free.fr> 1.308

	* MANIFEST.SKIP: added libconfig to avoid accidental upload of
	Debian test packages

2010-07-19  Dominique Dumont  <domi.dumont@free.fr> 1.307

	* lib/Config/Model/Tk/Wizard.pm (destroy_wizard): correctly
	destroy wizard widget when quitting. Also main window is hidden
	while wizard is running

2010-07-13  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/Tk/ListEditor.pm (move_down): fixed to move
	past element nb 2.

2010-06-14  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/Tk/HashEditor.pm (Populate): Following
	Krzystof's usability suggestion (http://tyszecki.org/), buttons
	are disabled when list selection or entry are empty.

2010-05-31  Dominique Dumont  <domi.dumont@free.fr> 

	* Added annotations viewer and editor for Leaf, List, CheckList, Node,
	and Hash. This enable to view and edit comments in configuration files when 
	the backend support reading and writing comments into Config::Model annotations

2010-03-29  Dominique Dumont  <dominique.dumont@hp.com> 1.306

	* Build.PL: Depends on Config::Model 1.001

	* lib/Config/Model/Tk/*.pm: Put back VERSION number and bumped
	them all to 1.305 to make CPAN indexer happy

2010-03-27  Dominique Dumont  <domi.dumont@free.fr> 1.305

	* Build.PL: depends on Pod::POM and on Config::Model >= 1.001
